<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.devin.mobiledevicesproject.MapsActivity"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="455dp"
        tools:context="com.example.devin.mobiledevicesproject.MapsActivity"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/searchBar" />

    <fragment
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        />

    <TextView
        android:text="@string/_0_km"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorProceed"
        android:background="@drawable/drawable"
        android:gravity="center"
        android:id="@+id/distance" />

    <TextView
        android:text="@string/no_trip_planned_0_00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/costOfTrip"
        android:textColor="@color/colorProceed"
        android:background="@drawable/drawable"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_above="@+id/distance"/>

    <Button
        android:text="@string/find_routes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/routeFind"
        android:enabled="false"
        android:visibility="invisible"
        android:backgroundTint="@color/colorFind"
        android:onClick="drawRoute"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_above="@+id/costOfTrip"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/routeOptions"
        android:layout_above="@+id/costOfTrip"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/routeFind"
        android:background="@drawable/spinnerbg"/>
</RelativeLayout>